--- a/announcement/templates/Announcement.html
+++ b/announcement/templates/Announcement.html
@@ -12,10 +12,10 @@
   }
   h3 {
     border-radius: 25px;
-    padding: 10px;
+    padding: 40px;
     color:white;
-    background-color: teal;
-    border: black 2px solid;
+    background-color: #4db6ac;
+    border: teal 2px solid;
   }
 </style>
 
