--- a/courses/templates/my_course.html
+++ b/courses/templates/my_course.html
@@ -47,7 +47,7 @@
 
                 <div class="wrapper">
 
-                <a href="/courses/createAnnounce/{{ qs1 }}"> <button type="submit" class="btn btn-primary">create Anncouncement</button></a>
+                <a href="/courses/createAnnounce/{{ qs1 }}"> <button type="submit" class="btn btn-primary">Create Anncouncement</button></a>
               
               </div>
               {% endif   %}
