--- a/templates/index.html
+++ b/templates/index.html
@@ -43,8 +43,7 @@
                 <h2 class="center teal-text"><i class="material-icons">flash_on</i></h2>
                 <h5 class="center">Speeds up development</h5>
     
-                <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-              </div>
+                <p class="light">Online Classroom develops the fundamentals of the subjects for the students who don't believe in the traditional classroom teaching.</p></div>
             </div>
     
             <div class="col s12 m4">
@@ -52,7 +51,7 @@
                 <h2 class="center teal-text"><i class="material-icons">group</i></h2>
                 <h5 class="center">User Experience Focused</h5>
     
-                <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+                <p class="light">By utilizing elements and principles of Online Classroom, students and teachers are able to expand their knowledge by creating and joining their subjects respectively.The students and teachers will get familiar with using online classroom as they will be interacting with each other.</p>
               </div>
             </div>
     
@@ -61,7 +60,7 @@
                 <h2 class="center teal-text"><i class="material-icons">settings</i></h2>
                 <h5 class="center">Easy to work with</h5>
     
-                <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+                <p class="light">Both the students and the teachers will be provided with their respective courses.They can easily share their materials and assignments with each other.On their respective announcements,both the students and teachers can comments on the given announcements.</p>
               </div>
             </div>
           </div>
