--- a/user/templates/sample/signin.html
+++ b/user/templates/sample/signin.html
@@ -50,6 +50,8 @@
           <div class="control-group">
             <div class="controls">
               <button type="submit" class="btn btn-primary">Login</button>
+                 or
+                 <button type="submit" class="btn btn-primary">Signup</button>
             </div>
           </div>
         </form>
