--- a/templates/Base.html
+++ b/templates/Base.html
@@ -37,9 +37,15 @@
 
     <title>E-Classroom</title>
   </head>
+ <style>
+
+
+   
+ </style> 
   
-  </style>
   <body>
+     
+      
     <nav class="teal lighten-2"> 
         <div class="nav-wrapper">
         <a class="navbar-brand" href="/">Classroom</a>
@@ -54,11 +60,11 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-       
+        
           <ul class="right hide-on-med-and-down">
            
             <li class="nav-item">
-                <a class="nav-link" href="/"><i class="large material-icons">home</i></a>
+                <a class="nav-link" href="/home">HOME</a>
               </li>
             <li class="nav-item">
               <a class="nav-link" href="/about">ABOUT</a>
@@ -70,7 +76,7 @@
 
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/accounts/profile/"><i class="large material-icons">account_circle</i></a>
+            <a class="nav-link" href="/accounts/profile/">{{user}}</a>
           </li>
             <li class="nav-item">
               <a class="nav-link" href="/accounts/logout">LOGOUT</a>
@@ -85,11 +91,13 @@
             {% endif %}
             
           </ul>
-        </div>
+      
       </div>
     </nav>
-    <br>  
-    <br>
+    <section>
+
+    </section>
+    
     {% block content %} {% endblock %}
   
    <footer class="page-footer teal lighten-2">
@@ -99,10 +107,10 @@
           <div class="col l6 s12">
             <h6 class="white-text">Pages</h5>
             <ul class="links list-unstyled">
-              <li><a class="white-text" href="/" class="text-muted">About Us</a></li>
+              <li><a class="white-text" href="/about" class="text-muted">About Us</a></li>
               <li><a class="white-text" href="#" class="text-muted">Contacts</a></li>
               <li><a class="white-text" href="#" class="text-muted">Features</a></li>
-              <li><a class="white-text" href="#" class="text-muted">Courses</a></li>
+              <li><a class="white-text" href="/courses/all" class="text-muted">Courses</a></li>
             </ul>
           </div>
           <div class="col-lg-4 col-md-6">
