--- a/templates/Base.html
+++ b/templates/Base.html
@@ -64,7 +64,7 @@
           <ul class="right hide-on-med-and-down">
            
             <li class="nav-item">
-                <a class="nav-link" href="/home">HOME</a>
+                <a class="nav-link" href="/">HOME</a>
               </li>
             <li class="nav-item">
               <a class="nav-link" href="/about">ABOUT</a>
@@ -82,7 +82,7 @@
               <a class="nav-link" href="/accounts/logout">LOGOUT</a>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="/accounts/signin">LOGIN</a>
+              <a class="nav-link" href="/accounts/login">LOGIN</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/accounts/signup">SIGNUP</a>
