--- a/user/templates/sample/signin.html
+++ b/user/templates/sample/signin.html
@@ -50,17 +50,27 @@
           <div class="control-group">
             <div class="controls">
               <button type="submit" class="btn btn-primary">Login</button>
-                 or
-                 <button type="submit" class="btn btn-primary">Signup</button>
+
+              
+              
+
+              
             </div>
           </div>
         </form>
       </div>
+      <br/>
+<p>OR</p>
+
+
+<a href="/accounts/signup" class="btn btn-primary">Signup</a>
+
     </div>
   </div>
 </div>
 <br />
 <br />
+
 <br />
 <br />
 <br />
