--- a/templates/Base.html
+++ b/templates/Base.html
@@ -64,7 +64,7 @@
           <ul class="right hide-on-med-and-down">
            
             <li class="nav-item">
-                <a class="nav-link" href="/home">HOME</a>
+                <a class="nav-link" href="/">HOME</a>
               </li>
             <li class="nav-item">
               <a class="nav-link" href="/about">ABOUT</a>
@@ -82,7 +82,7 @@
               <a class="nav-link" href="/accounts/logout">LOGOUT</a>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="/accounts/signin">LOGIN</a>
+              <a class="nav-link" href="/accounts/login">LOGIN</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/accounts/signup">SIGNUP</a>
@@ -104,21 +104,15 @@
     
       <div class="container">
         <div class="row">
-          <div class="col l6 s12">
-            <h6 class="white-text">Pages</h5>
-            <ul class="links list-unstyled">
-              <li><a class="white-text" href="/about" class="text-muted">About Us</a></li>
-              <li><a class="white-text" href="#" class="text-muted">Contacts</a></li>
-              <li><a class="white-text" href="#" class="text-muted">Features</a></li>
-              <li><a class="white-text" href="/courses/all" class="text-muted">Courses</a></li>
-            </ul>
+          <div class="col-sm-6">
+            
           </div>
           <div class="col-lg-4 col-md-6">
-            <h6>Features</h5>
+            <h6>Pages</h5>
             <ul class="links list-unstyled">
-              <li><a class="white-text" href="#" class="text-muted">Teaching Method</a></li>
-              <li><a class="white-text" href="#" class="text-muted">Application</a></li>
-              <li><a class="white-text" href="#" class="text-muted">Future</a></li>
+              <li><a class="white-text" href="#" class="text-muted">About Us</a></li>
+              <li><a class="white-text" href="#" class="text-muted">Courses</a></li>
+              
             </ul>
           </div>
         </div>
@@ -128,7 +122,7 @@
       <div class="container">
         
             <p class="mb-md-0">
-              &copy; 2019 Your company. All rights reserved.
+              &copy; SIT Pune. All rights reserved.
             </p>
           </div>
         </div>
