--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,41 @@
 {% extends "Base.html" %} {% block content %}
 
-<h1>about us</h1>
-<p></p>
+
+<style>
+section{
+    background-color:#e0f2f1  ;
+    padding: 15px;
+}
+p{
+    text-decoration-color: thistle;
+    text-decoration-style: solid;
+    margin-left: 20px;
+    margin-right: 30px;
+}
+
+</style>
+
+
+<section>
+<h1 class="text-center">About Us</h1>
+
+</section>
+ <br>
+ <br>
+<p>We aim to ease up Teacher-Student communication Using Classroom 2.0 easy and hastle free communication can be achived. Classroom management is the process by which teachers and schools create and maintain appropriate behavior of students in classroom settings. The purpose of implementing classroom management strategies is to enhance prosocial behavior and increase student academic engagement. Effective classroom management principles work across almost all subject areas and grade levels. When using a tiered model in which school-wide support is provided at the universal level, classroom behavior management programs have shown to be effective for 80-85 percent of all students. More intensive programs may be needed for some students.</p>
+<br>
+<br>
+<br>    
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br><br>
+<br>
+<br>
+
 {% endblock %}
