--- a/announcement/templates/Announcement_detail.html
+++ b/announcement/templates/Announcement_detail.html
@@ -37,6 +37,8 @@
   <h4 class="text-center">{{ obj.title }}</h4>
   <h6 class="text-center">{{ obj.content }}</h6>
 
+  <img src="{{obj.image.url}}"/>
+
   <br>
   <br>
   <br>
@@ -68,7 +70,6 @@
   <p class="text-center">{{ com.text }}<p>
 
   <h6 class="text-center">by {{ com.by }}</h6>
-  
   <h6 class="text-center">at {{ com.at }}</h6>
   </div>
   </div>
